# qns-3

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  TODO  case.md  design.md  implement.md
doc/: implementation.md  q-cast-protocol.md  quantum-basis.rst  quantum-network-layer.md  routing-caveats.md
essay/: Makefile  dtx-style.sty  latexmkrc  midterm-slides.typ  slides.typ  thusetup.tex  thuthesis-author-year.bbx  thuthesis-author-year.bst  thuthesis-author-year.cbx  thuthesis-bachelor.bbx  thuthesis-bachelor.bst  thuthesis-bachelor.cbx  thuthesis-example.tex  thuthesis-inline.cbx  thuthesis-numeric.bbx  thuthesis-numeric.bst  thuthesis-numeric.cbx  thuthesis.cls  thuthesis.dtx  thuthesis.ins
essay/data/: abstract.tex  acknowledgements.tex  appendix-survey.tex  appendix-translation.tex  appendix.tex  chap-nonisotonic.tex  chap-phymodel.tex  chap-routing-survey.tex  chap01.tex  chap02.tex  chap03.tex  chap04.tex  comments.tex  committee.tex  denotation.tex  resolution.tex  resume.tex  simulator-arch.tex
essay/ref/: refs.bib
examples/: CMakeLists.txt  decoherence-test.cc  dijkstra-vs-qcast.cc  dijkstra-vs-sliced-dijkstra.cc  dijkstra-vs-sliced-random.cc  dijkstra-vs-sliced-topology-zoo.cc  distill-nested-adapt-example.cc  distill-nested-example.cc  ent-swap-adapt-example.cc  ent-swap-adapt-local-example.cc  ent-swap-example.cc  fidelity-formula-check.cc  fidelity-test.cc  four-node-chain-test.cc  generate-test-configs.py  q-cast-dynamic-delay-example.cc  q-cast-example.cc  q-cast-random-topology-example.cc  qcast-entanglement-test.cc  qcast-performance-test.cc  qcast-protocol-example.cc  qcast-scaling-test-simple.cc  qcast-scaling-test.cc  quantum-network-layer-example.cc  quantum-network-layer-example.cc.backup  quantum-routing-benchmark.cc  quantum-routing-example.cc  routing-comparison-example.cc  routing-detailed-analysis.cc  routing-mismatch-example.cc  signaling-delay-example.cc  swap-fidelity-test.cc  telep-lin-adapt-example.cc  telep-lin-example.cc
helper/: quantum-mismatch-topology-helper.cc  quantum-mismatch-topology-helper.h  quantum-net-stack-helper.cc  quantum-net-stack-helper.h  quantum-topology-helper.cc  quantum-topology-helper.h
model/: AGENTS.md  dijkstra-routing-protocol.cc  dijkstra-routing-protocol.h  q-cast-routing-protocol.cc  q-cast-routing-protocol.h  quantum-basis.cc  quantum-basis.h  quantum-channel.cc  quantum-channel.h  quantum-delay-model.cc  quantum-delay-model.h  quantum-dijkstra-routing.cc  quantum-dijkstra-routing.h  quantum-error-model.cc  quantum-error-model.h  quantum-fidelity-model.cc  quantum-fidelity-model.h  quantum-forwarding-engine.cc  quantum-forwarding-engine.h  quantum-header.cc  quantum-header.h  quantum-l3-protocol.cc  quantum-l3-protocol.h  quantum-link-layer-service.cc  quantum-link-layer-service.h  quantum-memory-model.cc  quantum-memory-model.h  quantum-memory.cc  quantum-memory.h  quantum-metric.cc  quantum-metric.h  quantum-network-layer.cc  quantum-network-layer.h  quantum-network-simulator.cc  quantum-network-simulator.h  quantum-node.cc  quantum-node.h  quantum-packet.cc  quantum-packet.h  quantum-phy-entity.cc  (+13 more)
model/qcast/: expected-throughput-metric.cc  expected-throughput-metric.h  qcast-forwarding-engine.cc  qcast-forwarding-engine.h  qcast-route-types.cc  qcast-route-types.h  qcast-routing-protocol.cc  qcast-routing-protocol.h
results/: expected_results.md
results/20260305_010526/: aggregated.csv  all_runs.csv  summary.txt  topology_ErdosRenyi.csv  topology_RandomGeometric.csv  topology_ScaleFree.csv
scripts/: run_experiments.sh
test/: quantum-test-suite.cc
